tests/diagnostics_golden/diag_result_unguarded.txt
Diagnostics Golden: Result Unguarded
Source: tests/negative/neg_result_unguarded.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_result_unguarded.safe:32:14: error: access to variant field 'Value' requires established discriminant 'OK'
  |
  | 32 |       return R.Value;  -- REJECTED: R.OK not established
  |    |              ^~~~~~~
  |
  note: the discriminant 'OK' was not established on all paths before this access.
------------------------------------------------------------------------
